# history-ai-chat

./: .gitignore  CLAUDE.md  README.md  build.bat  build.spec  pyproject.toml  requirements.txt  run.bat  stop.bat
docs/plans/: 2026-03-16-ai-chat-viewer-design.md  2026-03-16-ai-chat-viewer-plan.md  2026-03-16-desktop-exe-design.md  2026-03-16-desktop-exe-implementation.md  2026-03-16-favorites-design.md  2026-03-16-favorites.md  2026-03-17-token-statistics-design.md  2026-03-17-token-statistics.md  2026-04-10-conversation-page-enhancements.md  2026-04-13-real-cost-pricing.md
docs/superpowers/plans/: 2026-03-17-markdown-export-enhancement.md
docs/superpowers/specs/: 2026-03-17-markdown-export-enhancement-design.md  2026-05-14-app-icon-design.md  2026-05-14-liquid-glass-navbar-design.md
src/viewer/: __init__.py  cli.py  desktop.py  main.py  pricing.py  tray.py
src/viewer/assets/: __init__.py
src/viewer/db/: __init__.py  cache.py
src/viewer/parsers/: __init__.py  claude.py  codex.py
src/viewer/static/css/: theme.css
src/viewer/static/js/: app.js
src/viewer/templates/: base.html  conversation.html  dashboard.html  project.html
tests/: conftest.py  test_cache.py  test_claude_parser.py  test_codex_parser.py  test_integration.py  test_markdown_export.py  test_pricing.py  test_token_parsing.py
