[project]
name = "history-ai-chat"
version = "1.0.1"
description = "Web viewer for Claude Code and Codex CLI conversation history"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "jinja2>=3.1.0",
    "pygments>=2.17.0",
    "python-dateutil>=2.8.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
history-ai-chat = "viewer.cli:main"
history-ai-chat-desktop = "viewer.desktop:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["viewer"]